<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/jiolocal_search_layout">

        <!--Search Header for JioLocal-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_header"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/search_grey_background"
            android:gravity="center_horizontal"
            android:padding="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/jiolocal_back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/search_help"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_rounded_corner_search_new"
                android:padding="5dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/jiolocal_back_arrow"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:id="@+id/jiolocal_search_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:foregroundGravity="center_vertical"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:src="@drawable/ic_baseline_search_24"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/jiolocal_search_box"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:autofillHints="true"
                    android:background="@color/white"
                    android:foregroundGravity="center_vertical"
                    android:gravity="center_vertical"
                    android:hint="@string/jiolocal_search"
                    android:inputType="text"
                    android:paddingEnd="60dp"
                    android:text=""
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/jiolocal_search_icon" />

                <ImageView
                    android:id="@+id/clear_search_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/circle"
                    android:foregroundGravity="center_vertical"
                    android:src="@drawable/ic_baseline_clear_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@string/clear_search_text"
                    android:visibility="invisible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--Container for all other fragments-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/search_header">

            <!--Location Bar Container-->
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/location_searchFilter_header_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/jiolocal_recent_search_header"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                app:layout_constraintTop_toBottomOf="@id/location_searchFilter_header_container"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@color/white"
                android:paddingTop="15dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:textColor="#666666"
                    android:text="@string/recent_searches"
                    android:fontFamily="@font/jio_type_medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:textColor="@color/blue"
                    android:textAlignment="textEnd"
                    android:text="@string/clear_all_search_text"
                    android:fontFamily="@font/jio_type_medium" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/jiolocal_search_view_header"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                app:layout_constraintTop_toBottomOf="@id/location_searchFilter_header_container"
                app:layout_constraintStart_toStartOf="parent"
                android:elevation="20dp"
                android:visibility="gone">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <TextView
                        android:id="@+id/search_result_count_text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/jio_type_medium"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="@string/search_count"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/search_layout_toggle_button"
                        android:layout_width="wrap_content"
                        android:layout_height="23dp"
                        android:layout_marginBottom="-1dp"
                        android:background="@drawable/bg_rounded_corner_search_new"
                        android:backgroundTint="@color/search_grey_background"
                        android:gravity="center_vertical"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/search_layout_toggle_icon"
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:src="@drawable/top_bar_location_icon"
                            android:contentDescription="View Toggle" />

                        <TextView
                            android:id="@+id/search_layout_toggle_text"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/jio_type_medium"
                            android:text="@string/search_view_toggle_text"
                            android:textColor="@color/blue"
                            android:gravity="center"
                            android:textSize="12sp" />

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <!--Recent Searches Recycler View-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recent_search_recycler_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/jiolocal_recent_search_header" />

            <!--Search Suggestions Recycler View-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_suggestions_recycler_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/location_searchFilter_header_container" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/search_results_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@color/search_grey_background"
                app:layout_constraintTop_toBottomOf="@id/jiolocal_search_view_header"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>